--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   <body>
     <h1>Clutzの利用例</h1>
     <h2>コンソールに"Hello, pirosikick"と表示されていれば成功</h2>
-    <script src="hello.js"></script>
+    <script src="hello-build.js"></script>
   </body>
 </html>
